<resources>
    <string name="app_name">SimpleSleepTracker</string>
    <string name="tracked_nights">Tracked Nights</string>
    <string name="avg_duration">Avg. Duration</string>
    <string name="time_sleeping">Time Sleeping</string>
    <string name="start_date">Start date</string>
    <string name="time_asleep">Time asleep</string>
    <string name="time_awake">Time awake</string>
    <string name="longest_night">Longest Night</string>
    <string name="shortest_night">Shortest Night</string>
    <string name="average_bed_time">Average Bed Time</string>
    <string name="average_wake_up_time">Average Wake Up Time</string>
    <string name="not_implemented_yet">Not implemented yet</string>
    <string name="statistics">Statistics</string>
    <string name="owl_image_content_description">Owl image</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_statistics">Statistics</string>
    <string name="title_diary">Diary</string>
    <string name="title_profile">Profile</string>
    <string name="title_home">Home</string>
    <string name="confirm_delete_sleep">Do you really want to delete this sleep session?</string>
    <string name="cancel">Cancel</string>
    <string name="sign_out">Sign out</string>
    <string name="not_backed_up_yet">No recent backup.</string>
    <string name="last_backup">Last backup</string>
    <string name="add_sleep_session">Add Sleep Session</string>
    <string name="you_have_slept_for">You\'ve slept for</string>
    <string name="nights">nights</string>
    <string name="no_sleep_tracked_yet">Start tracking your sleep today. All your tracked nights will be listed here.</string>
    <string name="sleep_duration">Sleep duration</string>
    <string name="save">SAVE</string>
    <string name="delete">Delete</string>
    <string name="enable_backup">Enable Backup</string>
    <string name="sign_in_description">Sign in with your Google Account to backup your sleep data.</string>

    <plurals name="nights">
        <item quantity="one">%d night</item>
        <item quantity="other">%d nights</item>
    </plurals>
    <string name="settings">Settings</string>
    <string name="pin_widget">Add me to your home screen\nCLICK HERE</string>
    <string name="add_widget">Add me to your home screen\nLEARN MORE</string>
    <string name="remember_to_toggle_sleep">Click me to start tracking your sleep.</string>
    <string name="sleeping_zzz"><b>ZZZzzzzz…</b></string>
    <string name="sleeping_zzz_onboarding"><b>ZZZzzzzz…</b>\n(Click to awake)</string>
    <string name="go_to_bed">Go to sleep</string>
    <string name="wake_up">Wake up</string>
    <string name="sleep_minimum">Minimum <b>1</b> hour of sleep.</string>
    <string name="sleep_minimum_notification_title">Minimum 1 hour sleep</string>
    <string name="sleep_minimum_notification_description">Minimum 1 hour of sleep to be tracked.</string>
    <string name="slept_for">Last night\'s sleep %1$s.</string>
    <string name="add_widget_instructions"><![CDATA[<p>1. On the home screen, tap and hold on an <b>available space</b>.</p><p>2. Tap <b>widgets</b></p><p>3. Select the sleep widget. You will need to press and hold it to select it.</p><p>4. Drag and drop the <b>widget</b> onto the available space.</p>5. The widget is now displayed]]></string>
    <string name="add_widget_dialog_title">Add Widget to Home screen</string>
    <string name="notification_channel_name">Sleep notifications</string>
    <string name="foreground_notification_channel_name">Sleep foreground notifications</string>
    <string name="notification_channel_description">Sleep notifications</string>
    <string name="foreground_notification_channel_description">Sleep foreground notifications</string>
    <string name="demo">DEMO</string>
    <string name="sleep_detection_notification_title">Sleep detection active</string>
    <string name="sleep_detection_notification_description">Tracking</string>
    <string name="sleep_settings">Sleep Settings</string>
    <string name="automatic_sleep_detection">Automatic Sleep Detection</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_and_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="third_party_licenses">Third Party Licenses</string>
    <string name="about">About</string>
</resources>
